Get rid of `@imaginary-math/box-model`

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div style="width: 800px"><canvas id="chart"></canvas></div>
+    <input type="checkbox" id="run" />Run
     <textarea id="model-source"></textarea>
     <script src="../ts/index.ts" type="module"></script>
   </body>
