--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,10 +5,12 @@
     <title>Circular Economy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../scss/style.scss" />
+    <link rel="stylesheet" href="../scss/svg-viz.scss" />
   </head>
   <body>
-    <div style="width: 800px"><canvas id="chart"></canvas></div>
     <input type="checkbox" id="run" />Run
+    <div id="model-viz-container"></div>
+    <div style="width: 800px"><canvas id="chart"></canvas></div>
     <script src="../ts/index.ts" type="module"></script>
   </body>
 </html>
