--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,6 +10,23 @@
   <body>
     <input type="checkbox" id="run" />Run
     <div id="model-viz-container"></div>
+    <br />
+    <div id="parameter-transforms">
+      Available:
+      <div class="available"></div>
+      Active:
+      <div class="active"></div>
+    </div>
+    <br />
+    <hr />
+    <div>
+      Id:<br />
+      <input type="text" id="parameter-transform-id" /><br />
+      Script:<br />
+      <textarea id="parameter-transform-script" rows="5" cols="80"></textarea
+      ><br />
+      <button id="add-parameter-transform">Add</button>
+    </div>
     <div style="width: 800px"><canvas id="chart"></canvas></div>
     <script src="../ts/index.ts" type="module"></script>
   </body>
