Add priliminary circularity and user satisfaction index computation

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="../scss/svg-viz.scss" />
   </head>
   <body>
+    <div>
+      Circularity Index:&nbsp;
+      <span id="circularity-index"></span>
+      &nbsp;&nbsp;&nbsp; User satisfaction:&nbsp;
+      <span id="user-satisfaction"></span>
+    </div>
     <input type="checkbox" id="run" />Run
     <div id="model-viz-container"></div>
     <br />
