Add sliders for initial parameters

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,6 +15,7 @@
       <span id="user-satisfaction"></span>
     </div>
     <input type="checkbox" id="run" />Run
+    <div id="sliders"></div>
     <div id="model-viz-container"></div>
     <br />
     <div id="parameter-transforms">
