Reorder UI elements

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="../scss/svg-viz.scss" />
   </head>
   <body>
+    <div id="model-viz-container"></div>
     <div>
       Circularity Index:&nbsp;
       <span id="circularity-index"></span>
       &nbsp;&nbsp;&nbsp; User satisfaction:&nbsp;
       <span id="user-satisfaction"></span>
     </div>
-    <input type="checkbox" id="run" />Run
-    <div id="sliders"></div>
-    <div id="model-viz-container"></div>
+    <br />
+    <div><input type="checkbox" id="run" />Run</div>
     <br />
     <div id="parameter-transforms">
       Available:
@@ -35,6 +35,7 @@
       <button id="add-parameter-transform">Add</button>
     </div>
     <div style="width: 800px"><canvas id="chart"></canvas></div>
+    <div id="sliders"></div>
     <script src="../ts/index.ts" type="module"></script>
   </body>
 </html>
