Add support for overwriting existing parameter transformations

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -32,7 +32,7 @@
       Script:<br />
       <textarea id="parameter-transform-script" rows="5" cols="80"></textarea
       ><br />
-      <button id="add-parameter-transform">Add</button>
+      <button id="add-parameter-transform">Add/Modify</button>
     </div>
     <div style="width: 800px"><canvas id="chart"></canvas></div>
     <div id="sliders"></div>
