Add support for importing and exporting parameter transforms as JSON

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -36,6 +36,13 @@
     </div>
     <div style="width: 800px"><canvas id="chart"></canvas></div>
     <div id="sliders"></div>
+    <hr />
+    <textarea id="import-export" rows="10" cols="80"></textarea>
+    <div>
+      <input type="button" id="import-button" value="Import" />
+      <input type="button" id="export-button" value="Export" />
+    </div>
+    <br />
     <script src="../ts/index.ts" type="module"></script>
   </body>
 </html>
