Add support for deleting existing parameter transforms

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -33,6 +33,7 @@
       <textarea id="parameter-transform-script" rows="5" cols="80"></textarea
       ><br />
       <button id="add-parameter-transform">Add/Modify</button>
+      <button id="delete-parameter-transform">Delete</button>
     </div>
     <div style="width: 800px"><canvas id="chart"></canvas></div>
     <div id="sliders"></div>
