Add support for clearing all active parameter transformations

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -23,6 +23,12 @@
       <div class="available"></div>
       Active:
       <div class="active"></div>
+      <br />
+      <input
+        type="button"
+        value="Clear all active transforms"
+        id="clear-all-active-parameter-transforms-button"
+      />
     </div>
     <br />
     <hr />
