Migrate marker and slot event handling to RxJS

--- a/src/html/marker.html
+++ b/src/html/marker.html
@@ -7,12 +7,7 @@
     <link rel="stylesheet" href="../scss/marker.scss" />
   </head>
   <body>
-    <div id="panel">
-      <div id="slot-1" class="slot"></div>
-      <div id="slot-2" class="slot"></div>
-      <div id="marker-1" class="marker"></div>
-      <div id="marker-2" class="marker"></div>
-    </div>
+    <div id="panel"></div>
     <script src="../ts/marker.ts" type="module"></script>
   </body>
 </html>
