--- a/src/html/marker.html
+++ b/src/html/marker.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../scss/marker.scss" />
   </head>
   <body>
-    <div id="panel"></div>
+    <div id="panel" class="slot-panel"></div>
     <script src="../ts/marker.ts" type="module"></script>
   </body>
 </html>
