Add marker and slot overlay panel on top of main app user interface

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../scss/style.scss" />
     <link rel="stylesheet" href="../scss/svg-viz.scss" />
+    <link rel="stylesheet" href="../scss/marker.scss" />
   </head>
   <body>
     <div id="top-level-container">
@@ -18,6 +19,7 @@
           <span id="user-satisfaction"></span>
         </div>
       </div>
+      <div id="slot-panel" class="slot-panel"></div>
       <div id="control-panel">
         <nav>
           <div class="nav nav-tabs" id="nav-tab" role="tablist">
