Hide control panel by default

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -21,7 +21,7 @@
           </div>
         </div>
         <div id="slot-panel" class="slot-panel"></div>
-        <div id="control-panel">
+        <div id="control-panel" class="hidden">
           <nav>
             <div class="nav nav-tabs" id="nav-tab" role="tablist">
               <button
