Make background image configurable via `general` config section

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,9 +11,7 @@
   <body>
     <div id="fixed-size-container">
       <div id="top-level-container">
-        <div id="illustration-panel">
-          <img src="../img/background.webp" />
-        </div>
+        <div id="illustration-panel"></div>
         <div id="viz-panel">
           <div id="model-viz-container"></div>
           <div id="circularity-index-container" class="score">
