Reposition indices/scores

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,10 +16,12 @@
         </div>
         <div id="viz-panel">
           <div id="model-viz-container"></div>
-          <div id="indices">
+          <div id="circularity-index-container" class="score">
             Kreislaufindex:&nbsp;
             <span id="circularity-index"></span>
-            &nbsp;&nbsp;&nbsp; Nutzerzufriedenheit:&nbsp;
+          </div>
+          <div id="user-satisfaction-container" class="score">
+            Nutzerzufriedenheit:&nbsp;
             <span id="user-satisfaction"></span>
           </div>
         </div>
