Fix model dialog being covered by static backdrop
Bootstrap inserts the static backdrop into `<body>`. However, the modal
dialog is a child of the scaled container and is therefore covered and
blocked by the static backdrop. This patch removes the static backdrop
althogether as a workaround.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -198,7 +198,7 @@
       <div
         class="modal fade"
         id="modal"
-        data-bs-backdrop="static"
+        data-bs-backdrop="false"
         data-bs-keyboard="false"
         tabindex="-1"
         aria-labelledby="staticBackdropLabel"
