Increase internal game resolution from FullHD to UHD

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,7 +12,7 @@
     <div id="fixed-size-container">
       <div id="top-level-container">
         <div id="illustration-panel">
-          <img src="../img/background.webp" width="100%" height="100%" />
+          <img src="../img/background.webp" />
         </div>
         <div id="viz-panel">
           <div id="model-viz-container"></div>
